@@ -20,37 +20,21 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 '''
 
-import os
-import hashlib
-import requests
+import json
 
-CF_IPS_URL = "https://www.cloudflare.com/ips-v4"
-CF_IPS_LOCAL = "ips-v4.txt"
+with open("setting.json", "r") as f:
+    setting = json.load(f)
 
-def get_cf_ips():
-    if not os.path.exists(CF_IPS_LOCAL):
-        download_cf_ips()
-
-    with open(CF_IPS_LOCAL, "r") as f:
-        cf_ips = f.read().splitlines()
-
-    return cf_ips
-
-def download_cf_ips():
-    response = requests.get(CF_IPS_URL)
-    if response.status_code == 200:
-        cf_ips = response.text.strip()
-        hash_cf_ips = hashlib.md5(cf_ips.encode("utf-8")).hexdigest()
-        if not os.path.exists(CF_IPS_LOCAL) or hash_cf_ips != get_local_ips_hash():
-            with open(CF_IPS_LOCAL, "w") as f:
-                f.write(cf_ips)
-    else:
-        raise Exception("Unable to download Cloudflare IPs.")
-
-def get_local_ips_hash():
-    if os.path.exists(CF_IPS_LOCAL):
-        with open(CF_IPS_LOCAL, "rb") as f:
-            content = f.read()
-            return hashlib.md5(content).hexdigest()
-    else:
-        return None
+# 使用 bind 設定監聽的 IP 0.0.0.0 和 port 443
+bind = "0.0.0.0:443"
+# 使用 certfile 和 keyfile 設定 SSL 憑證和私鑰的路徑，並且從 setting.json 檔案中讀取其值
+certfile = setting["CERT"]
+keyfile = setting["PRIVKEY"]
+# 使用 chdir 設定 Gunicorn 啟動時的工作目錄
+chdir = "PATH"
+# 使用 accesslog 設定訪問日誌的位置，這裡使用 "-" 表示日誌輸出到 stdout，修改Code再使用
+accesslog = "-"
+# 使用 errorlog 設定錯誤日誌的位置，這裡設定為 /var/log/download.log
+errorlog = "/var/log/download.log"
+# 使用 loglevel 設定日誌級別，這裡設定為 info
+loglevel = "info"
