@@ -1,6 +1,7 @@
 # 歷史更新 History Update
 
 * 20230505 Update
+  * 加入 Downalod Server + 自動簽屬mobileconfig
   * 加入 LineBot 新邀請網址liff.line.me
   * 調整 LineBot Log規則
   * 調整 LineBot Threading方法
